# IOSharp-netmf-Linux

./: .gitignore  .travis.yml  CNAME  README.md  index.html  params.json
IOSharp-c/: .gitignore  CMakeCache.txt  CMakeLists.txt  IOSharp.c  IOSharp.h  Makefile  cmake_install.cmake  netmf-linux.c  spidev_test.c
IOSharp-netmf/: CI.proj  iosharp_netmf.sln
IOSharp-netmf/IOSharp.Examples/: BlinkingLedExample.cs  ButtonEventExample.cs  IOSharp.Examples.csproj  SPIExample.cs  SimpleNordicWriteAddress.cs  UARTExample.cs
IOSharp-netmf/IOSharp.Examples/Gralin.NETMF.Nordic.NRF24L01Plus/: AddressSlot.cs  AddressWidth.cs  Bits.cs  Commands.cs  NRF24L01Plus.cs  Registers.cs  Status.cs
IOSharp-netmf/IOSharp.Examples/MFRC522_API/: SPIApi.cs
IOSharp-netmf/IOSharp.Examples/Properties/: AssemblyInfo.cs
IOSharp-netmf/IOSharp.Examples/Utils/: ExtensionAttribute.cs  StringUtils.cs
IOSharp-netmf/IOSharp.NETMF.RaspberryPi/: IOSharp.NETMF.RaspberryPi.csproj
IOSharp-netmf/IOSharp.NETMF.RaspberryPi/Hardware/: Pins.cs  RaspberryPiHWProvider.cs
IOSharp-netmf/IOSharp.NETMF.RaspberryPi/Properties/: AssemblyInfo.cs
IOSharp-netmf/Microsoft.SPOT/: Microsoft.SPOT.csproj
IOSharp-netmf/Microsoft.SPOT/Exceptions/: HardwareProvidedNotRegistered.cs
IOSharp-netmf/Microsoft.SPOT/Hardware/: Cpu.cs  Debug.cs  HardwareProvider.cs  IOPorts.cs  Ports.cs  SPI.cs
IOSharp-netmf/iosharp_netmf/: BlinkingLedExample.cs  ButtonEnum.cs  ButtonEventExample.cs  Cpu.cs  GPIOManager.cs  HardwareProvider.cs  IOPorts.cs  IOSharp_NETMF.csproj  Program.cs  SPI.cs
docs/: IOSharp.pptx
(+4 files in other folders)
